# agentlane

./: .gitignore  .yamllint.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  pyrightconfig.json  ruff.toml
.agents/skills/code-change-verification/: SKILL.md
.agents/skills/docs-sync/: SKILL.md
.agents/skills/release/: SKILL.md
.agents/skills/vhs/: SKILL.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  pypi-publish.yml
docs/: README.md  lessons.md
docs/agents/: handler-patterns.md
docs/code-style/: README.md  comments.md  tool-design.md
docs/harness/: agents.md  architecture.md  default-agents.md  runner.md  shims.md  skills.md  tasks.md  tools.md
docs/messaging/: routing-and-delivery.md
docs/models/: overview.md  prompt-templating.md
docs/releases/: v0.3.0.md  v0.4.1.md  v0.5.0.md  v0.6.0.md  v0.6.1.md  v0.7.0.md  v0.8.0.md
docs/runtime/: TODO.md  distributed-runtime-architecture.md  distributed-runtime-usage.md  engine-and-execution.md
docs/tracing/: overview.md
docs/transport/: serialization.md
examples/: README.md  __init__.py
examples/harness/: README.md  __init__.py
examples/harness/agent_as_tool_policy_specialist/: README.md  __init__.py  main.py
examples/harness/agent_as_tool_risk_specialist/: README.md  main.py
examples/harness/base_tools_plan_quickstart/: README.md  __init__.py  main.py
examples/harness/base_tools_quickstart/: README.md  main.py
examples/harness/clinical_inbox_copilot/: README.md  __init__.py  main.py
examples/harness/customer_support_conversation/: README.md  __init__.py  _demo_utils.py  main.py
examples/harness/default_agent_quickstart/: README.md  main.py
examples/harness/default_agent_shims_quickstart/: README.md  main.py
examples/harness/default_agent_skills_quickstart/: README.md  main.py
examples/harness/default_agent_streaming_quickstart/: README.md  main.py
examples/harness/default_agent_tool_note_writer/: README.md  __init__.py  main.py
examples/harness/default_handoff_takeover/: README.md  __init__.py  main.py
examples/harness/handoff_to_clinical_escalation/: README.md  main.py
examples/harness/handoff_to_returns_specialist/: README.md  __init__.py  main.py
examples/harness/patient_care_conversation/: README.md  __init__.py  main.py
examples/harness/streaming_escalation_flow/: README.md  main.py
examples/harness/tool_calling_search_answer/: README.md  __init__.py  _demo_utils.py  main.py
examples/models/: README.md
examples/models/claude_streaming_tool_thinking/: README.md  main.py
examples/models/openai_streaming_tool_reasoning/: README.md  main.py
examples/runtime/: README.md  __init__.py
examples/runtime/distributed_publish_fan_in/: README.md  __init__.py  main.py
examples/runtime/distributed_scatter_gather/: README.md  __init__.py  main.py
examples/runtime/multi_agent_workflow/: README.md  __init__.py  demo.tape  main.py
examples/runtime/simple/: README.md  __init__.py  distributed_publish_fan_in.py  distributed_scatter_gather.py
examples/throughput/: __init__.py
examples/throughput/high_throughput_messaging/: README.md  __init__.py  demo.tape  main.py
examples/workflows/: README.md  __init__.py
src/agentlane/: __init__.py  version.py
src/agentlane/agents/: __init__.py  base.py
src/agentlane/apps/: __init__.py
src/agentlane/extensions/: __init__.py
src/agentlane/harness/: __init__.py  _agent.py  _cancellation.py  _handoff.py  _hooks.py  _lifecycle.py  _run.py  _runner.py  _skills.py  _stream.py  _task.py  _tooling.py
src/agentlane/messaging/: __init__.py  _cancellation.py  _context.py  _envelope.py  _identity.py  _outcome.py  _routing.py  _routing_policy.py  _subscription.py
src/agentlane/models/: README.md  __init__.py  _exceptions.py  _interface.py  _json_repair.py  _messages.py  _output_schema.py  _prompts.py  _rate_limiter.py  _response_utils.py  _retry.py  _streaming.py  _strict_schema.py  _tool.py  _tool_executor.py  _tool_output_adapter.py
src/agentlane/runtime/: __init__.py  _agent.py  _base_agent.py  _cancellation.py  _context.py  _dispatcher.py  _distributed_env.py  _distributed_grpc.py  _distributed_wire.py  _engine.py  _environment.py  _message_helpers.py  _network.py  _protocol.py  _registry.py  _runtime.py  _scheduler.py  _single_threaded_env.py  _types.py  _worker_runtime.py  _worker_runtime_host.py
src/agentlane/tracing/: README.md  __init__.py  _create.py  _metrics_processor.py  _processor_interface.py  _processors.py  _propagation.py  _provider.py  _scope.py  _span.py  _span_data.py  _trace.py
src/agentlane/transport/: __init__.py  _codecs_json.py  _codecs_protobuf.py  _errors.py  _registry.py  _serializer.py  _types.py  _utils.py  (+1 more)
tests/: test_scaffold.py
tests/agents/: test_agent_protocol.py
tests/harness/: conftest.py  test_agent_lifecycle.py  test_default_agent.py  test_harness_scaffold.py  test_runner.py  test_shims.py  test_skills.py  test_task.py  test_tools.py  test_tools_agent.py  test_tools_bash.py  test_tools_find.py  test_tools_foundation.py  test_tools_grep.py  test_tools_patch.py  test_tools_plan.py  test_tools_read.py  test_tools_write.py  tools_test_utils.py
tests/messaging/: test_router.py
tests/models/: conftest.py  test_json_repair.py  test_messages.py  test_output_schema.py  test_prompts.py  test_rate_limiter.py  test_response_utils.py  test_run_context.py  test_streaming.py  test_strict_schema.py  test_tooling.py
tests/runtime/: test_cancellation.py  test_distributed_runtime.py  test_distributed_wire.py  test_engine.py
tests/tracing/: conftest.py  test_metrics.py  test_trace_context.py
tests/transport/: test_serialization.py
(+78 files in other folders)
