[project]
name = "agentlane"
version = "0.2.0"
description = "AI agent runtime and messaging framework"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "demjson3>=3.0.6,<4.0.0",
  "httpx>=0.28.0,<1.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "json-repair>=0.39.0,<1.0.0",
  "openai>=1.68.2",
  "pydantic>=2.8.0,<3.0.0",
  "protobuf>=5.29.0,<6.0.0",
  "grpcio>=1.71.0,<2.0.0",
  "structlog>=25.1.0,<26.0.0",
  "tenacity>=9.0.0,<10.0.0",
  "typing-extensions>=4.12.0",
  "rich>=14.2.0",
  "types-protobuf>=6.32.1.20260221",
  "types-grpcio>=1.0.0.20251009",
]
classifiers = [
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Repository = "https://github.com/yasik/agentlane-py"

[tool.mypy]
strict = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
agentlane = { workspace = true }
agentlane-braintrust = { workspace = true }
agentlane-openai = { workspace = true }
agentlane-litellm = { workspace = true }
agentlane-transport = { workspace = true }
agentlane-cli = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["src/agentlane"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]

[dependency-groups]
dev = [
  "mypy",
  "black==26.1.0",
  "isort==7.0.0",
  "pytest>=8.2",
  "pyright>=1.1.408",
  "ruff>=0.14.14",
  "yamllint>=1.37.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
