[project]
name = "agentlane"
version = "0.5.0"
description = "An event-based runtime and messaging framework for AI agents."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "demjson3>=3.0.6,<4.0.0",
  "httpx>=0.28.0,<1.0.0",
  "jinja2>=3.1.0,<4.0.0",
  "json-repair>=0.39.0,<1.0.0",
  "openai>=1.68.2",
  "pydantic>=2.8.0,<3.0.0",
  "protobuf>=5.29.0,<6.0.0",
  "grpcio>=1.71.0,<2.0.0",
  "structlog>=25.1.0,<26.0.0",
  "tenacity>=9.0.0,<10.0.0",
  "typing-extensions>=4.12.0",
  "rich>=14.2.0",
  "types-protobuf>=6.32.1.20260221",
  "types-grpcio>=1.0.0.20251009",
]
classifiers = [
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
braintrust = [
  "braintrust>=0.0.168",
]
litellm = [
  "litellm>=1.71.1",
]
openai = []
all = [
  "braintrust>=0.0.168",
  "litellm>=1.71.1",
]

[project.urls]
Repository = "https://github.com/yasik/agentlane"

[tool.mypy]
strict = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false

[tool.hatch.build.targets.wheel]
packages = [
  "src/agentlane",
  "packages/braintrust/src/agentlane_braintrust",
  "packages/litellm/src/agentlane_litellm",
  "packages/openai/src/agentlane_openai",
]

[tool.hatch.build.targets.wheel.sources]
"src" = ""
"packages/braintrust/src" = ""
"packages/litellm/src" = ""
"packages/openai/src" = ""

[tool.pytest.ini_options]
testpaths = ["tests", "packages"]

[dependency-groups]
dev = [
  "mypy",
  "black==26.1.0",
  "isort==7.0.0",
  "pytest>=8.2",
  "pyright>=1.1.408",
  "ruff>=0.14.14",
  "yamllint>=1.37.0",
  "vulture>=2.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
